--- a/State management using context and reducer/todos-context-usereducer-1-no-context/package.json
+++ b/State management using context and reducer/todos-context-usereducer-1-no-context/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "context-app",
+  "name": "todos-hooks",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -7,7 +7,8 @@
     "@material-ui/icons": "^3.0.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "2.1.8"
+    "react-scripts": "2.1.8",
+    "uuid": "^3.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
